# stock-coach

./: .env.example  .gcloudignore  .gitignore  01-learning-roadmap.md  02-system-architecture.md  03-dev-guide.md  04-project-instructions.md  CLAUDE.md  Complete Stock Market Fundamental Analysis in 6 hours [2020-2025 videos compilation].txt  Copy of FP Data Collection - Rajat Mahajan (1).xlsx  Dockerfile  README.md
backend/: main.py  pyproject.toml
backend/agents/: advisor_agent.py  allocation_advisor_agent.py  catalyst_analyst.py  fund_analyst.py  gainer_analyst.py  growth_triggers_agent.py  market_analyst.py  portfolio_xray_agent.py  predictor.py  radar_analyst.py  thesis_analyst.py
backend/api/: deps.py
backend/core/: auth.py  config.py  exceptions.py  logging.py  user_auth.py
backend/models/: portfolio.py  schemas.py
backend/services/: cache.py  catalyst_scanner.py  dip_scanner.py  fund_compare.py  fund_data.py  fund_enrichment.py  fund_metrics.py  fund_portfolio.py  fundamental_enricher.py  fundamental_scoring.py  investor_profile_store.py  market_data.py  news_fetcher.py  portfolio_store.py  portfolio_xray.py  quality_dip_screener.py  quarterly_fetcher.py  sector_service.py  technicals.py  us_etf_data.py  user_store.py  value_recovery_scanner.py
backend/tests/: conftest.py  test_advisor.py  test_agents.py  test_allocation_advisor_agent.py  test_allocation_plan.py  test_cache.py  test_catalyst.py  test_conviction.py  test_fundamental_enricher.py  test_fundamental_scoring.py  test_funds.py  test_gainers_api.py  test_growth_triggers_live.py  test_radar.py  (+7 more)
(+65 files in other folders)
