[tool.poetry]
name = "stockcoach-backend"
version = "0.1.0"
description = "StockCoach AI — top gainers analysis and prediction engine"
authors = ["StockCoach Team"]
python = "^3.11"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
pydantic = "^2.9.0"
pydantic-settings = "^2.5.0"
yfinance = "^0.2.50"
httpx = "^0.27.0"
google-cloud-aiplatform = "^1.67.0"
redis = {extras = ["hiredis"], version = "^5.1.0"}
structlog = "^24.4.0"
python-dotenv = "^1.0.0"
tenacity = "^9.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
pytest-cov = "^5.0.0"
respx = "^0.21.0"
ruff = "^0.6.0"
mypy = "^1.11.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=. --cov-report=term-missing --cov-omit=tests/*"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
